Theme/ElegantFin-theme-nightly.css
/* ... */
.card-hoverable:hover .cardImageContainer {
    transform: scale(1.025);
}

.card-hoverable .itemSelectionPanel {
    transition: transform 0.125s;
}

.card-hoverable:hover .cardScalable,
.card-hoverable:hover .itemSelectionPanel {
    transform: scale(1.02);
}

.card-hoverable .cardScalable:active {
    transition: transform 0.075s;
    transform: scale(1);
}

.cardScalable:has(.cardOverlayButton-hover:hover) > .cardImageContainer {
    transform: scale(1);
}

.cardOverlayContainer {
    transition: 0.5s;
    background: rgba(255, 255, 255, 0.05);
}

.cardOverlayContainer:after {
    content: var(--cardHoverEffect);
    transition: 0.5s;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    transform: translateY(-50%) translateX(0);
    background: var(--hoverGradientV);
}

.card-hoverable:hover .cardOverlayContainer:after {
    transform: translateY(50%) translateX(0);
    opacity: 0;
}

.backdropCard.card-hoverable .cardOverlayContainer:after,
.overflowBackdropCard.card-hoverable .cardOverlayContainer:after {
    transform: translateY(0) translateX(-50%);
    background: var(--hoverGradientH);
}

.backdropCard.card-hoverable:hover .cardOverlayContainer:after,
.overflowBackdropCard.card-hoverable:hover .cardOverlayContainer:after {
    transform: translateY(0) translateX(50%);
    opacity: 0;
}

.cardBox:not(.visualCardBox) .cardPadder {
    background-color: var(--lighterGradientPoint);
}

.cardOverlayContainer > .cardOverlayFab-primary {
    left: unset;
    margin-left: unset;
    margin-top: unset;
    top: unset;
    left: calc(var(--overlayPlayButtonPosition) - 1.5em);
    bottom: calc(var(--overlayPlayButtonPosition) - 1.5em);
}

.cardOverlayContainer > .cardOverlayFab-primary,
.listItemImageButton,
.layout-mobile .cardOverlayButton-br:not([data-action="menu"]) > .cardOverlayButtonIcon {
    background-color: var(--btnMiniPlayColor) !important;
    color: white;
    border: var(--defaultLighterBorder);
    border-color: var(--btnMiniPlayBorderColor);
    font-size: 75%;
    box-shadow: var(--shadow);
    z-index: 2;
}

.cardOverlayContainer > .cardOverlayFab-primary:hover,
.listItemImageButton:hover {
    color: white;
}

.cardOverlayButton-br .cardOverlayButton-hover[data-action="menu"],
.layout-desktop .listItemButton[data-action="menu"] {
    display: none;
}

.layout-desktop .cardOverlayButton-br,
[dir="ltr"].layout-desktop .cardOverlayButton-br {
    bottom: 0.75em;
    right: 0.5em;
    display: var(--extraCardButtonsVisibility);
    z-index: 1;
}

.layout-desktop .cardOverlayButton-br button {
    color: white;
    text-shadow: var(--shadow);
}

.layout-mobile .cardOverlayButton {
    padding: 1em;
    font-size: 60%;
}

.layout-mobile .cardOverlayButton-br,
[dir="ltr"] .layout-mobile .cardOverlayButton-br {
    /* bottom: 0.25em;
    right: 0.25em; */
    display: var(--miniOverlayButtonVisibility);
}

.layout-mobile .portraitCard .cardOverlayButton-br:not([data-action="menu"]),
.layout-mobile .backdropCard .cardOverlayButton-br:not([data-action="menu"]) {
    display: none;
}

.layout-mobile .cardOverlayButton-br[data-action="menu"] > .cardOverlayButtonIcon {
    background-color: transparent !important;
    color: white;
    border: none;
    text-shadow: 1px 1px 0.1em black;
    color: white;
}

.cardOverlayContainer:has(> button:hover) {
    backdrop-filter: var(--blurDefault);
}

.listViewUserDataButtons {
    font-size: small;
}

.layout-mobile .listViewUserDataButtons {
    flex-direction: column;
    font-size: x-small;
}

/* episode grid start */

@supports (display: revert) {
    .layout-desktop .vertical-list:has(.listItem-largeImage) {
        display: grid;
        grid-template-columns: repeat(auto-fill, minmax(min(var(--minEpisodeCardWidth), 100%), 1fr));
        gap: var(--itemColumnGap);
    }

    .layout-desktop .listItem-largeImage {
        display: grid;
        margin-bottom: 0 !important;
    }

    .layout-desktop .listItem-largeImage > .listItem-content {
        display: grid;
        grid-template-columns: 1fr 1fr 2em;
        order: 1;
        height: 100%;
        align-items: start;
    }

    .layout-desktop .listItem-largeImage > .listItem-bottomoverview {
        order: 2;
    }

    .layout-desktop .listItem-largeImage .listItemImage-large {
        order: 1;
        grid-column: 1 / -1;
        height: max-content;
        min-height: 15em;
        width: 100%;
        aspect-ratio: 16 / 9;
        box-sizing: border-box;
    }

    .layout-desktop .listItem-largeImage .listItemBody {
        order: 2;
        grid-column: 1 / 3;
        padding: 1em 0.125em;
    }

    .layout-desktop .listItem-largeImage .listViewUserDataButtons {
        flex-direction: column;
        font-size: small;
        order: 2;
        grid-column: 3;
        align-self: center;
    }
}

/* episode grid end */

.portraitCard {
    min-width: 5em;
}

.bannerCard {
    --cardCount: 2;
}

/* if the window width is equal to or more than (at minimum) 300em then the code in the query will trigger */
/* 16 posters, 12 thumbs */
@media (min-width: 300em) {
    .portraitCard,
    .squareCard {
        --cardCount: 16;
    }

    .overflowPortraitCard,
    .overflowSquareCard {
        --cardCount: 15;
    }

    .squareCard:has(.cardFooter) {
        --cardCount: 12;
    }

    .backdropCard {
        --cardCount: 12;
    }

    .overflowBackdropCard {
        --cardCount: 11;
    }
}

/* if the window width is equal to or less than (at maximum) 300em then the code in the query will trigger */
/* 15 posters, 11 thumbs */
@media (max-width: 300em) {
    .portraitCard,
    .squareCard {
        --cardCount: 15;
    }

    .overflowPortraitCard,
    .overflowSquareCard {
        --cardCount: 14;
    }

    .squareCard:has(.cardFooter) {
        --cardCount: 11;
    }

    .backdropCard {
        --cardCount: 11;
    }

    .overflowBackdropCard {
        --cardCount: 10;
    }
}
/* ... */

